Force Railway to use NIXPACKS - no Docker
- Removed .dockerignore file completely
- Replaced railway.toml with railway.json for better compatibility
- Added package.json to help Railway detect Python project
- Updated nixpacks.toml with explicit Python build configuration
- Railway should now use NIXPACKS builder instead of looking for Dockerfile
- No more Docker-related errors

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["python39", "gcc"]
 cmds = ["pip install -r requirements.txt"]
 
 [phases.build]
-cmds = ["echo 'Build complete'"]
+cmds = ["echo 'Python build complete - no Docker needed'"]
 
 [start]
 cmd = "python start_railway.py"
